更换七牛云博客图片资源

--- a/source/_posts/抢票神器-12306分流抢票.md
+++ b/source/_posts/抢票神器-12306分流抢票.md
@@ -12,20 +12,20 @@ tags:
 <!--more-->
 
 4. 选择***出发地***和***目的地***，选择***出行时间***，然后选择***车票预定***，点击***查询车票***。
-![image](http://pd4brty72.bkt.clouddn.com/12306%E9%80%89%E6%8B%A9%E5%87%BA%E5%8F%91%E7%AB%99%E5%92%8C%E7%BB%88%E7%82%B9%E7%AB%99.png)
+![image](http://lbz-blog.test.upcdn.net/post/12306%E9%80%89%E6%8B%A9%E5%87%BA%E5%8F%91%E7%AB%99%E5%92%8C%E7%BB%88%E7%82%B9%E7%AB%99.png)
 5. 然后就会在下面列表出现所所符合的车次，点击右手边的预定，就会把它添加到***已选车次***栏，不小心点错的可以在***已选车次***栏右键所选车次进行删除
 
-![image](http://pd4brty72.bkt.clouddn.com/12306%E5%88%97%E8%A1%A8.png)
+![image](http://lbz-blog.test.upcdn.net/post/12306%E5%88%97%E8%A1%A8.png)
 
 6. 选择乘车人
 7. 位置的选择，建议选择***二等座******和无座***
 
-![image](http://pd4brty72.bkt.clouddn.com/12306%E8%BD%A6%E6%AC%A1%20.png)
+![image](http://lbz-blog.test.upcdn.net/post/12306车次.png)
 
 8. 点击最右下角的**开始抢票**
 9. 然后你可以最小化程序，让他后台在抢票
 10. 当抢票成功之后，就会放出好听的音乐提醒。在***半小时***内（订单有效期半小时，半小时不支付就会自动取消你辛辛苦苦抢到的票），你就打开手机APP12306客户端，在未完成订单页面完成支付，此时大功告成。
 11. 如果你不能长时间呆在电脑前面，怕miss了怎么办，不用怕。这个软件有个提醒功能
-![image](http://pd4brty72.bkt.clouddn.com/%E6%8F%90%E9%86%92.png)
+![image](http://lbz-blog.test.upcdn.net/post/%E6%8F%90%E9%86%92.png)
 
 最好选择***微信通知***，步骤如图所示，接收好友可以选择***文件传输助手***（也就是自己），这样子你就可以离开电脑 。留意微信就好。
