修改博文注解与反射以及动态代理图片链接

--- a/source/_posts/注解与反射以及动态代理.md
+++ b/source/_posts/注解与反射以及动态代理.md
@@ -492,7 +492,7 @@ class java.lang.String
 
 代理模式一般会有三个角色：
 
-![image-20220421194707010](/Users/laibinzhi/Library/Application Support/typora-user-images/image-20220421194707010.png)
+![image](https://s2.loli.net/2022/05/06/d9MvX2Zbl83FmLn.png)
 
 **抽象角色**：指代理角色和真实角色对外提供的公共方法，一般为一个接口
 
