添加博文-序列化总结

--- a/source/_posts/注解与反射以及动态代理.md
+++ b/source/_posts/注解与反射以及动态代理.md
@@ -38,6 +38,9 @@ Annotation（注解）就是Java提供了一种元程序中的元素关联任何
 2. @Deprecated(标志已过时)，
 3. @SuppressWarnings(抑制编译器警告)
 
+<!--more-->
+
+
 #### 元注解
 
 在定义注解时，注解类也能够使用其他的注解声明。对注解类型进行注解的注解类，我们称之为 meta
